# project-rust

./: .gitignore  BENCHMARKING_GUIDE.md  README.md  compare_benchmarks.sh
security-darts/bls/: bls.dart  bls_id.dart  bls_test.dart  id_vec.dart  ph_item.dart  public_key.dart  public_key_vec.dart  secret_key.dart  secret_key_calculation_error.dart  secret_key_vec.dart  signature.dart  signature_vec.dart  threshold_key.dart
security-darts/crypto/: crypto_manager.dart  hasher.dart  keystore_provider.dart  secret_key_manager.dart  secure_storage.dart
security-darts/mcl/: fr.dart  g1.dart  g2.dart  gt.dart  mcl_bg_fp.dart  mcl_bg_g1.dart  mcl_bn_fp2.dart  mcl_bn_fr.dart  mcl_bn_g2.dart  mcl_bn_gt.dart
security-darts/native_bindings/: bls_bindings.dart  bls_id_bindings.dart  fr_bindings.dart  g1_bindings.dart  g2_bindings.dart  gt_bindings.dart  native_functions.dart  public_key_bindings.dart  secret_key_bindings.dart  signature_bindings.dart
security-darts/pin/: pin_manager.dart
security-darts/pvsh/: hiver.dart  thresher.dart
security-rs/: BENCHMARKS.md  Cargo.toml  build.rs  run_benchmarks.sh
security-rs/benches/: crypto_benchmarks.rs  memory_benchmark.rs
security-rs/src/: device.rs  http.rs  lib.rs  threshold.rs  types.rs
security-rs/src/crypto/: bls.rs  ffi.rs  mod.rs  pvsh.rs  secret_sharing.rs  threshold.rs  utils.rs
security-rs/tests/: device_registration.rs
security-ts/: BENCHMARKS.md  extract-g2-generator.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
tests/: device_registration.rs
(+34 files in other folders)
