[package]
name = "security"
version = "0.1.0"
edition = "2024"

[dependencies]
mcl_rust = { git = "https://github.com/herumi/mcl-rust", tag = "v1.0.3" }
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
ureq =  { version = "3.1.4", features = ["json"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
