[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
ureq =  { version = "3.1.4", features = ["json"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[build-dependencies]
